fix: update mobile spacing, add period

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -199,8 +199,13 @@ img[src*='gif'] {
 }
 
 .website-alert__icon {
-  margin: 0 1rem;
+  margin-right: 1.375rem;
+  margin-left: 0.875rem;
   fill: $inverse-01;
+
+  @include breakpoint('lg') {
+    margin: 0 1rem;
+  }
 }
 
 .website-alert__button {
